Fix bug where a elements were selectable while off screen

--- a/front-end/src/styles/projects.css
+++ b/front-end/src/styles/projects.css
@@ -64,9 +64,7 @@
   left: 100%;
   transition: left 0.8s cubic-bezier(0.10, 0.20, 0.30, 1);
   background-color: #fff;
-
   padding: 10px;
-  border: 1px solid var(--col-blue-drk);
 }
 
 #projects .project.focused {
